--- a/Copy_of_week2_Python_in_class_work.ipynb
+++ b/Copy_of_week2_Python_in_class_work.ipynb
@@ -254,7 +254,7 @@
       "cell_type": "code",
       "source": [
         "# Scatter plot of Happiness Score vs freedom to make life choices\n",
-        "plt.scatter(df['Freedom to Make Life Choices'], df['HappinessScore'], color='green')\n",
+        "plt.scatter(df['Freedom to make life choices'], df['HappinessScore'], color='green')\n",
         "plt.xlabel('Freedom to Make Life Choices')\n",
         "plt.ylabel('Happiness Score')\n",
         "plt.title('Happiness Score vs Freedom to Make Life Choices')\n",
@@ -279,7 +279,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Scatter plot of Happiness Score vs social support\n",
+        "plt.scatter(df['Generosity'], df['HappinessScore'], color='green')\n",
+        "plt.xlabel('Generosity')\n",
+        "plt.ylabel('Happiness Score')\n",
+        "plt.title('Happiness Score vs Generosity')\n",
+        "plt.show()"
+      ],
       "metadata": {
         "id": "wXlQAsVSWaZm"
       },
@@ -335,6 +342,22 @@
       ],
       "metadata": {
         "id": "aGPFFGlrZsPn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Scatter plot of  Rank Score vs freedom to make life choices\n",
+        "plt.scatter(df['Freedom to make life choices'], df['Rank'], color='green')\n",
+        "plt.xlabel('Freedom to Make Life Choices')\n",
+        "plt.ylabel( 'Rank')\n",
+        "plt.title(' Rank vs Freedom to Make Life Choices')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "wDweQVBjVWEi"
       },
       "execution_count": null,
       "outputs": []
