--- a/Data_110_Ifreador_week4.ipynb
+++ b/Data_110_Ifreador_week4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqx5ddZKx8Kj84QwBln7Zo",
+      "authorship_tag": "ABX9TyMiiGweX0uEqBlxVgtgbD4+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,57 @@
     {
       "cell_type": "code",
       "source": [
+        "# Task 1\n",
+        "import pandas as pd\n",
+        "# Create a dictionary with the data\n",
+        "data = {    \"Offense\": [        \"Aggravated Assault\", \"Burglary\", \"Larceny\", \"Motor Vehicle Theft\",         \"Murder\", \"Rape (revised definition)\", \"Robbery\"    ],\n",
+        "        \"Offenses per 100,000 People (2023)\": [264.1, 250.7, 1347.2, 318.7, 5.7, 38.0, 66.5],    \"Change in Offenses per 100,000 People (2022-2023)\": [-3.3, -8.1, -4.9, 12.0, -12.0, -9.8, -0.8]}\n",
+        "        # Create a pandasdataframe\n",
+        "df = pd.DataFrame(data)\n",
+        "print(df)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hv2tDmBUAvMC",
+        "outputId": "14ce5ed6-3174-4a4b-a87b-74c22d855fc3"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                     Offense  Offenses per 100,000 People (2023)  \\\n",
+            "0         Aggravated Assault                               264.1   \n",
+            "1                   Burglary                               250.7   \n",
+            "2                    Larceny                              1347.2   \n",
+            "3        Motor Vehicle Theft                               318.7   \n",
+            "4                     Murder                                 5.7   \n",
+            "5  Rape (revised definition)                                38.0   \n",
+            "6                    Robbery                                66.5   \n",
+            "\n",
+            "   Change in Offenses per 100,000 People (2022-2023)  \n",
+            "0                                               -3.3  \n",
+            "1                                               -8.1  \n",
+            "2                                               -4.9  \n",
+            "3                                               12.0  \n",
+            "4                                              -12.0  \n",
+            "5                                               -9.8  \n",
+            "6                                               -0.8  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
         "     # Task 1\n",
+        "\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Data for offenses and their rates per 100,000 people in 2023\n",
@@ -60,12 +110,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 526
+          "height": 607
         },
         "id": "12-wf9gpY9Vv",
-        "outputId": "bd5f903f-b614-4912-fdf7-2f46a958eea2"
+        "outputId": "2cf90a5f-2b3d-4bb7-9f75-43ef54eccb41"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -85,7 +135,7 @@
       "metadata": {
         "id": "ywhMk_txsViV"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -116,12 +166,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 526
+          "height": 607
         },
         "id": "enGADgMNLcDy",
-        "outputId": "9ba168fb-5da6-409c-9c0c-aeeb84584199"
+        "outputId": "4bb2fb70-f3e2-43a6-e786-ce41a23b134c"
       },
-      "execution_count": 88,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -158,7 +208,7 @@
       "metadata": {
         "id": "dHJkMZ5oxjIb"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -212,12 +262,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 512
+          "height": 707
         },
         "id": "RXrIPlw0jZ6g",
-        "outputId": "88abca50-09b6-4ba8-d3ec-6c426a59fc4c"
+        "outputId": "1c54c9bf-3374-4198-c9fd-abe89f875ea1"
       },
-      "execution_count": 84,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
