--- a/Ifreador_HW5.ipynb
+++ b/Ifreador_HW5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcVb0bX2eFnf1uUK6uXYev",
+      "authorship_tag": "ABX9TyNhbNqTicZOmko7m2mM0x7D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -449,7 +449,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#2 fare Dsitribution"
+      ],
       "metadata": {
         "id": "abfQrcn4pXga"
       },
@@ -507,7 +509,7 @@
     {
       "cell_type": "code",
       "source": [
-        "## task 3...Plot a histogram and KDE for the distribution of fares paid by passengers.\n",
+        "## Answer of task2 : Plot a histogram and KDE for the distribution of fares paid by passengers.\n",
         " #$  Question: What trends or outliers do you observe in the fare distribution? How might fare impact survival rates?\n",
         "\n",
         "\n",
@@ -522,7 +524,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# task 3 Fare and Survuval\n",
+        "# task 3 Fare and Survuval rate\n",
         " ##$ Create a KDE plot to compare the fare distributions for survivors and non-survivors.\n",
         " ## Question: Does fare seem to have influenced survival? What do the distributions suggest about socioeconomic status and survival?\n",
         "\n",
@@ -566,22 +568,11 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "#Influence of Fare on Survival: The KDE plot will likely show that survivors tended to pay higher fares compared to non-survivors. This suggests that passengers in higher fare classes (First Class) had a better chance of survival.\n",
+        "# Answer of task 3 : Influence of Fare on Survival: The KDE plot will likely show that survivors tended to pay higher fares compared to non-survivors. This suggests that passengers in higher fare classes (First Class) had a better chance of survival.\n",
         "#Socioeconomic Status and Survival: The distributions suggest that socioeconomic status played a significant role in survival. Higher fare-paying passengers, who were often in First Class, had better access to lifeboats and were prioritized during the evacuatio"
       ],
       "metadata": {
         "id": "SyXhlB5g2v0p"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# part 3### task 4 . Passenger class,fare ,and survival.\n"
-      ],
-      "metadata": {
-        "id": "8loxF59J3KOR"
       },
       "execution_count": null,
       "outputs": []
@@ -632,6 +623,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part## task 4 . Passenger class,fare ,and survival\n"
+      ],
+      "metadata": {
+        "id": "8loxF59J3KOR"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -697,7 +699,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Passengers in first class paid the highest fares, while those in third class paid the least.\n",
+        "#  Answer of task 4 : Passengers in first class paid the highest fares, while those in third class paid the least.\n",
         "#This shows the wealthier passengers had more luxurious accommodations. First-class passengers also had better survival rates because they had better access to lifeboats and received preferential treatment.\n",
         "#This highlights the clear divisions based on wealth and class on the Titanic, with richer passengers having better chances of survival."
       ],
@@ -770,7 +772,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Younger individuals tend to have a higher survival rate. Conversely, older individuals tend to have a higher density in the non-survivor category\n",
+        "# Answer of task 5 :  Younger individuals tend to have a higher survival rate. Conversely, older individuals tend to have a higher density in the non-survivor category\n",
         "# Younger individuals may be more agile and capable of physically enduring challenging situations, improving their chances of survival. Older may have physical challenges"
       ],
       "metadata": {
@@ -1268,7 +1270,7 @@
     {
       "cell_type": "code",
       "source": [
-        "##The chart likely shows that women had higher survival rates than men across most age groups. This reflects the \"women first\" policy during the Titanic's evacuation, where females were prioritized for lifeboats. Men, especially adults, had much lower survival rates, as they were less likely to be rescued. The disparity between male and female survival highlights the gender-based rescue practices during the disaster."
+        "##T Answer of task 6 :he chart likely shows that women had higher survival rates than men across most age groups. This reflects the \"women first\" policy during the Titanic's evacuation, where females were prioritized for lifeboats. Men, especially adults, had much lower survival rates, as they were less likely to be rescued. The disparity between male and female survival highlights the gender-based rescue practices during the disaster."
       ],
       "metadata": {
         "id": "Xdd2myB3eMH3"
